# budtiktok

./: .gitignore  BUDTIKTOK_HF_GAP_ANALYSIS.md  Cargo.toml  Cargo.toml.tmp  Dockerfile  IMPLEMENTATION_DESIGN.md  IMPLEMENTATION_PLAN.md  INTEGRATION_PLAN.md  README.md  REGRESSION_TEST_REPORT.md  TASKS.md  benchmark_hf_1gb.py  benchmark_results.csv  bpe_budtiktok_results.json  bpe_hf_results.json  budtiktok_hf_gap_analysis.md  clippy.toml  compare_tokens.py  concurrency_bottleneck.py  debug_accuracy.py  debug_apostrophe.py  debug_wordpiece.py  deep_debug.py  docker-compose.gpu.yml  docker-compose.yml  embedding_comparison.py  final_10.py  find_divergence.py  find_remaining_diff.py  full_pipeline_benchmark.py  hf_regression_test.py  hf_tokeniser_features.md  investigate_final.py  reproduce_interner.rs  rustfmt.toml  test_fffd.py  test_hf_pretok.py  verify_accuracy.py  wordpiece_budtiktok_results.json  wordpiece_hf_results.json
.github/: RELEASE.md  SETUP_SUMMARY.md
.github/workflows/: ci.yml  python-release.yml  python-test.yml  release.yml
crates/budtiktok-accuracy/: Cargo.toml
crates/budtiktok-accuracy/src/: main.rs
crates/budtiktok-bench/: Cargo.toml
crates/budtiktok-bench/src/: comprehensive_bench.rs  extensive_bench.rs  main.rs
crates/budtiktok-cli/: Cargo.toml
crates/budtiktok-cli/src/: main.rs
crates/budtiktok-coordinator/: Cargo.toml
crates/budtiktok-coordinator/src/: config.rs  coordinator.rs  health.rs  lib.rs  load_balancer.rs  metrics.rs  router.rs  token_budget.rs  worker.rs
crates/budtiktok-core/: Cargo.toml
crates/budtiktok-core/benches/: accuracy_debug.rs  bpe_benchmark.rs  bpe_extensive_benchmark.rs  bpe_scale_benchmark.rs  cache_benchmark.rs  deep_debug.rs  fix_accuracy.rs  full_accuracy_test.rs  test_specific.rs  unigram_1gb_benchmark.rs  unigram_benchmark.rs
crates/budtiktok-core/examples/: unigram_benchmark.rs
crates/budtiktok-core/fuzz/: Cargo.toml  README.md
crates/budtiktok-core/fuzz/fuzz_targets/: fuzz_ipc.rs  fuzz_json_parser.rs  fuzz_tokenize.rs  fuzz_unicode.rs
crates/budtiktok-core/src/: avx512.rs  bpe_fast.rs  bpe_linear.rs  config.rs  encoding.rs  lib.rs  loader.rs  memory.rs  normalizer.rs  postprocessor.rs  pretokenizer.rs  simd_backends.rs  special_tokens.rs  tables.rs  tokenizer.rs  unigram.rs  unigram_fast.rs  version.rs  vocab.rs  wordpiece.rs  wordpiece_hyper.rs
crates/budtiktok-core/src/pipeline/: mod.rs
crates/budtiktok-core/tests/: bpe_accuracy.rs  bpe_accuracy_test.rs  bpe_bug.rs  bpe_hyper_accuracy.rs  bpe_performance_comparison.rs  isa_consistency.rs  simd_validation.rs  unigram_accuracy_debug.rs  unigram_debug.rs  unigram_hf_accuracy.rs  unigram_simd_viterbi.rs
crates/budtiktok-core/tests/integration_tests/: tokenization.rs
crates/budtiktok-gpu/: Cargo.toml
crates/budtiktok-gpu/src/: backend.rs  bpe.rs  cuda.rs  gpu_native.rs  kernels.rs  lib.rs  memory.rs  spwp.rs  wordpiece.rs
crates/budtiktok-gpu/tests/: gpu_tests.rs
crates/budtiktok-ipc/: Cargo.toml
crates/budtiktok-ipc/src/: channel.rs  lib.rs  message.rs  serialization.rs  shared_memory.rs  socket.rs  transport.rs
crates/budtiktok-python/: Cargo.toml  README.md  pyproject.toml
crates/budtiktok-simd/: Cargo.toml
crates/budtiktok-simd/src/: backend.rs  detect.rs  lib.rs  patterns.rs  utf8.rs  whitespace.rs
docs/: PROFILING.md  UNIGRAM_OPTIMIZATION_PLAN.md  wordlevel_implementation_plan.md
infra/prometheus/: prometheus.yml
