[package]
name = "budtiktok-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Comparison benchmarking tool for BudTikTok vs HuggingFace, TEI, and BlazeText"

[[bin]]
name = "budtiktok-bench"
path = "src/main.rs"

[[bin]]
name = "extensive-benchmark"
path = "src/bin/extensive_benchmark.rs"

[[bin]]
name = "gpu-timing-benchmark"
path = "src/bin/gpu_timing_benchmark.rs"

[[bin]]
name = "gpu-kernel-only-benchmark"
path = "src/bin/gpu_kernel_only_benchmark.rs"

[[bin]]
name = "spwp-benchmark"
path = "src/bin/spwp_benchmark.rs"

[dependencies]
budtiktok-core = { path = "../budtiktok-core" }
budtiktok-gpu = { path = "../budtiktok-gpu", optional = true }
tokenizers = "0.15"

# BlazeText (path to bud-sentinel)
blazetext_wordpiece = { path = "../../../bud-sentinel/blazetext/wordpiece" }
ahash = "0.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
tabled = "0.14"
colored = "2.0"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
statistical = "1.0"
chrono = "0.4"
csv = "1.3"
plotters = { version = "0.3", optional = true }
rand = "0.8"

[features]
default = []
charts = ["plotters"]
cuda = ["budtiktok-gpu", "budtiktok-gpu/cuda"]

[dev-dependencies]
tempfile = "3.9"
