[package]
name = "budtiktok-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for BudTikTok tokenizer"

[[bin]]
name = "budtiktok"
path = "src/main.rs"

[dependencies]
budtiktok-core = { path = "../budtiktok-core" }
budtiktok-simd = { path = "../budtiktok-simd" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"
indicatif = "0.17"
tokio = { version = "1.35", features = ["full"] }

[features]
default = []
server = []
